--- a/css/main.css
+++ b/css/main.css
@@ -42,3 +42,12 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+
+@media only screen
+and (min-width : 480px)
+and (max-width : 940px){
+    body{
+       font-size: 130%; 
+    }
+
+}
