--- a/css/main.css
+++ b/css/main.css
@@ -45,9 +45,9 @@ ul.posts li {
 
 @media only screen
 and (min-width : 320px)
-and (max-width : 940px){
+and (max-width : 480px) {
     body{
-       font-size: 250%; 
+       font-size: 130%; 
+       min-width: 320px;
     }
-
 }
