--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 .frame{
-    margin: 60px auto;
+    margin: 10px auto;
     width: 70%;   
 }
 nav ul, footer ul {
@@ -49,7 +49,7 @@ ul.posts li {
 
 .hero{
     background: url('https://i.imgur.com/suqQlYe.jpg') no-repeat left top;
-    padding: 70px 0px;
+    padding: 70px 0px 90px 0;
     background-color: #000000;
     background-size: cover;
     -webkit-background-size: 100% auto;
