--- a/css/main.css
+++ b/css/main.css
@@ -48,9 +48,9 @@ ul.posts li {
 }
 
 .hero{
-    background: url('https://i.imgur.com/suqQlYe.jpg') no-repeat left top;
-    padding: 70px 0px 90px 0;
-    background-color: #000000;
+    background: url(https://i.imgur.com/y83C8sK.jpg) no-repeat left bottom;
+    padding: 110px 0 130px 0;
+    background-color: #000;
     background-size: cover;
     -webkit-background-size: 100% auto;
     -moz-background-size: 100% auto;
@@ -61,7 +61,7 @@ ul.posts li {
     -o-background-size: cover;
     background-size: cover;
     overflow: visible;
-    text-shadow: 0px 0px 6px #402c2d;
+    text-shadow: 0 0 6px #402c2d;
 }
 
 .blurb{
