--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #2bcfbb;
+    color: #00a0d8;
     cursor: pointer;
 }
 a:hover {
