--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,7 @@ ul.posts li {
     background-size: cover;
     overflow: visible;
     text-shadow: 0 0 6px #402c2d;
+    min-height: 300px;
 }
 
 .blurb{
