--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@ a {
     text-decoration: none;
     color: #000000;
     cursor: pointer;
+    opacity: 0.8;
 }
 a:hover {
     text-decoration: underline;
