--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,9 @@ body {
 }
 .frame{
     margin: 10px auto;
-    width: 70%;   
+    width: 70%;
+    display: flex;
+    align-items: center;
 }
 nav ul, footer ul {
     padding: 0px;
@@ -64,6 +66,7 @@ ul.posts li {
     overflow: visible;
     text-shadow: 0 0 6px #402c2d;
     min-height: 300px;
+    display: flex;
 }
 
 .blurb{
