--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     width: 100%;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'Inter', sans-serif;
 }
 .frame{
     margin: 10px auto;
