--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,6 @@ body {
 nav ul, footer ul {
     padding: 0px;
     list-style: none;
-    font-weight: bold;
 }
 nav ul li, footer ul li {
     display: inline;
@@ -22,10 +21,10 @@ a {
     text-decoration: none;
     color: #000000;
     cursor: pointer;
-    opacity: 0.8;
 }
 a:hover {
     text-decoration: underline;
+    opacity: .7;
 }
 h1 {
     font-size: 3em;
