--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@ ul.posts li {
 }
 
 .hero{
-    background: url(https://i.imgur.com/y83C8sK.jpg) no-repeat right bottom;
+    background: url(https://i.imgur.com/EkWkzt1.png) no-repeat right bottom;
     padding: 110px 0 130px 0;
     background-color: #000;
     background-size: cover;
